# nteract

./: .envrc  .gitattributes  .gitignore  .ignore  .mcp.json  .prettierrc.js  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  RELEASING.md  RUNTIMED_NODE_REFACTOR_PLAN.md  cliff.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vitest.config.ts
.cargo/: config.toml
.claude/: .gitignore
.claude-plugin/: marketplace.json
.codex/: config.toml
.context/: 2026-04-30-putblob-frame-design.md  comm-buffer-paths-blob-upload-plan.md  notebook-cloud-automerge-first-plan.md  phase-2-events.jsonl  phase-2-task-brief.md  putblob-sequencing-plan.md
.design-sync/: NOTES.md  config.json  conventions.md  css-entry.css
.github/: actionlint.yaml  labeler.yml
.hermes/: agent-status.md
changelogs/: current_changelog.md
contributing/: architecture.md  crdt-mutation-guide.md  e2e.md  environments.md  logging.md  protocol.md  runtimed.md
crates/automerge-recovery/: Cargo.toml
crates/automerge-recovery/src/: lib.rs
crates/automunge/: Cargo.toml
crates/automunge/src/: lib.rs
crates/comments-doc/: AGENTS.md  Cargo.toml
crates/comments-doc/assets/: comments_doc_genesis_v1.am
crates/comments-doc/src/: doc.rs  error.rs  handle.rs  identity.rs  lib.rs  types.rs
crates/kernel-env/: AGENTS.md  Cargo.toml
crates/kernel-env/src/: conda.rs  launcher.rs  lib.rs  pixi.rs  progress.rs  uv.rs
crates/kernel-launch/: Cargo.toml
crates/kernel-launch/src/: lib.rs  tools.rs
crates/markdown-doc/: Cargo.toml
crates/markdown-doc/src/: lib.rs
crates/mcp-supervisor/: Cargo.toml
crates/mcp-supervisor/src/: main.rs
crates/notebook/: Cargo.toml  Info.plist  tauri.conf.json
crates/notebook-cloud-transport/: Cargo.toml
crates/notebook-cloud-transport/src/: lib.rs  registry.rs
crates/notebook-doc/: AGENTS.md  Cargo.toml
crates/notebook-doc/assets/: notebook_genesis_v4.am  notebook_genesis_v5.am
crates/notebook-doc/src/: diff.rs  lib.rs  metadata.rs  mime.rs  pool_state.rs  presence.rs  sandbox.rs
crates/notebook-doc/tests/: generate_fixtures.rs
crates/notebook-protocol/: Cargo.toml
crates/notebook-protocol/src/: connection.rs  protocol.rs  typescript.rs
crates/notebook-protocol/src/connection/: env.rs  framing.rs  handshake.rs  pipe.rs  transport.rs
crates/notebook-sync/: AGENTS.md  Cargo.toml
crates/notebook-sync/src/: connect.rs  error.rs  execution_wait.rs  execution_watch.rs  handle.rs  lib.rs  relay.rs  relay_task.rs  reply.rs  shared.rs  status.rs  sync_task.rs  tests.rs
crates/notebook/capabilities/: default.json  diagnostics.json  feedback.json  onboarding.json  settings.json  upgrade.json
crates/notebook/fixtures/audit-test/: 17-output-widget-replay-stress.ipynb
crates/notebook/fixtures/trust-tests/: README.md
crates/notebook/src/: cli_install.rs  credentials.rs  diagnostics_upload.rs  lib.rs  mcpb_install.rs  menu.rs  session.rs  settings.rs
crates/notebook/src/iframe_shell/: frame.html  mod.rs
crates/notebook/tests/: iframe_shell.rs  iframe_shell_parity.rs  tauri_csp.rs
crates/nteract-identity/: Cargo.toml
crates/nteract-identity/src/: jupyterhub.rs  lib.rs  local.rs  oidc.rs
crates/nteract-mcp/: Cargo.toml
crates/nteract-mcp/src/: main.rs
crates/nteract-predicate/: Cargo.toml
crates/nteract-predicate/src/: lib.rs  parquet_features.rs  parquet_summary.rs  summary.rs
crates/nteract-telemetry/: Cargo.toml
crates/nteract-telemetry/src/: lib.rs
crates/playdate-image/: Cargo.toml  README.md
crates/playdate-image/src/: lib.rs
crates/playdate-image/tests/: conversion.rs
crates/playdate-pdi/: Cargo.toml
crates/playdate-pdi/src/: lib.rs
crates/playdate-pdi/tests/: conversion.rs
crates/repr-llm/: Cargo.toml
crates/repr-llm/src/: lib.rs  parquet.rs
crates/runt/: Cargo.toml
crates/runt-cloud-peer/: Cargo.toml
crates/runt-cloud-peer/src/: kernel_host.rs  main.rs
crates/runt-mcp/: Cargo.toml  build.rs
crates/runt-mcp-proxy/: Cargo.toml  tool-cache.json
crates/runt-mcp-proxy/src/: child.rs  proxy.rs  session.rs
crates/runt-mcp/assets/plugins/: leaflet.css  leaflet.js  markdown.css  markdown.js  sift.css  sift.js  vega.js
crates/runt-mcp/src/: cloud.rs  daemon_watch.rs  execution.rs  formatting.rs  icons.rs  lib.rs  project_file.rs  resources.rs  session.rs  session_activation.rs  structured.rs
crates/runt-mcp/src/tools/: cell_crud.rs  cell_meta.rs  cell_read.rs  comments.rs  deps.rs  editing.rs  execution.rs  kernel.rs  mod.rs  sandbox.rs  session.rs
crates/runt-publish/: Cargo.toml
crates/runt-publish/src/: lib.rs  main.rs
crates/runt-trust/: Cargo.toml
crates/runt-trust/src/: lib.rs
crates/runt-workspace/: Cargo.toml
crates/runt-workspace/src/: file_claims.rs  lib.rs
crates/runt/src/: cloud_cli.rs  kernel_client.rs  main.rs  notebook_cli.rs  workstation_cli.rs
crates/runt/tests/: cli.hone
crates/runtime-doc/: Cargo.toml
crates/runtime-doc/assets/: comms_doc_genesis_v1.am  runtime_state_genesis_v1.am  runtime_state_genesis_v2.am
crates/runtime-doc/src/: comms.rs  doc.rs  error.rs  handle.rs  lib.rs  policy.rs  projection.rs  types.rs
crates/runtime-projection/: Cargo.toml
crates/runtime-projection/src/: lib.rs
docs/: README.md  mac_setup.md  notebook-cloud-ec2-fallback.md  remote-workstation.md  runtimed.md  settings.md
e2e/: helpers-contract.test.mjs  helpers.js  wdio.conf.js
examples/: hf-fingerprint-demo.ipynb  hf_fingerprint.py
mcpb/: manifest.nightly.json  manifest.stable.json
python/: README.md
scripts/: assemble-plugin-dist.sh  build-renderer-plugins.ts  cloud-bootstrap.sh  cloud-setup.sh  codex-worktree-setup.sh  comments-doc-mcp-smoke.py  dump-frame-html.mjs  install-linux-release  install-nightly-release  mcp-connect-harness.py  plugin-dispatch-wrapper.cmd  plugin-dispatch-wrapper.sh  set_prerelease_version.py  smoke-mcp.py  smoke-ssh-runtime-agent.mjs  ssh-runtime-agent  test-install-release
src/: index.css  test-setup.ts  vite-env.d.ts
tests/: test_mcp_integration.py  test_smoke.py
(+1858 files in other folders)
