[workspace]
members = [
    "crates/build-metadata",
    "crates/runt",
    "crates/runt-trust",
    "crates/runt-workspace",
    "crates/kernel-launch",
    "crates/kernel-env",
    "crates/notebook",
    "crates/automunge",
    "crates/notebook-wire",
    "crates/notebook-doc",
    "crates/runtime-doc",
    "crates/notebook-protocol",
    "crates/notebook-sync",
    "crates/xtask",
    "crates/runtimed",
    "crates/runtimed-client",
    "crates/runtimed-node",
    "crates/runtimed-py",
    "crates/runtimed-wasm",
    "crates/mcp-supervisor",
    "crates/runt-mcp",
    "crates/runt-mcp-proxy",
    "crates/nteract-mcp",
    "crates/repr-llm",
    "crates/nteract-predicate",
    "crates/sift-wasm",
]
default-members = ["crates/notebook"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/nteract/desktop"

[workspace.dependencies]
anyhow = "1"
loro_fractional_index = "=1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
futures = "0.3"
bytes = "1"
base64 = "0.22"
tokio = { version = "1.36.0", features = ["full"] }
runtimelib = { git = "https://github.com/runtimed/runtimed", rev = "f982d30bc6c3ed699f7e0356703dea4f85ac7b64", default-features = false }
jupyter-protocol = { git = "https://github.com/runtimed/runtimed", rev = "f982d30bc6c3ed699f7e0356703dea4f85ac7b64" }
nbformat = { git = "https://github.com/runtimed/runtimed", rev = "f982d30bc6c3ed699f7e0356703dea4f85ac7b64" }
thiserror = "2"
schemars = "1"
notify = "8"
notify-debouncer-mini = "0.7"
ts-rs = { version = "12", features = ["serde-compat", "format"] }
jiter = { version = "0.13", default-features = false, features = ["num-bigint"] }

[workspace.lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Prevent panics in user-facing code - crashes are terrible UX.
# CI runs `clippy -- -D warnings` so these become errors in CI.
# Use #[allow(clippy::unwrap_used)] with a comment explaining why it's safe.
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
split-debuginfo = "packed"
# sccache and cargo's incremental compilation fight each other: sccache
# caches whole-crate outputs, incremental caches per-function deltas
# inside a crate. With incremental on, sccache's Rust hit rate hovers
# near zero. Turn it off so sccache actually shares builds across
# worktrees, branches, and fresh clones.
incremental = false

# Build third-party deps optimized even in dev. Our own crates stay at
# opt-level=0 for fast incremental rebuilds. Automerge in particular is
# unusable at opt-level=0: widget comm_opens were taking 300-450ms of
# CRDT write time each. Cost is a slower first compile; sccache caches
# the optimized deps so every later build and fresh worktree benefits.
[profile.dev.package."*"]
opt-level = 3

# Build scripts and proc macros run at build time; optimizing them cuts
# the total dev build wall-clock even accounting for the slower compile.
[profile.dev.build-override]
opt-level = 3

[profile.release]
opt-level = 'z'
# Strip DWARF debug info but keep the wasm name section. Browser
# panics from runtimed-wasm and sift-wasm would otherwise show
# opaque indices like `wasm[0]:0x12345` — useless for diagnosing
# field reports. Daemon/CLI binaries take a small (~1-3%) size hit
# but get the same benefit for production panic traces. We avoided
# a custom `[profile.wasm-release]` because wasm-pack's metadata
# parser only recognizes `release`/`profiling`/`dev` — custom
# profiles silently bypass `wasm-opt = false` and other settings.
strip = "debuginfo"
lto = true
codegen-units = 1
# Keep unwinding so catch_unwind guards work in release — both runtimed
# (spawn_supervised task recovery) and runt (automerge sync panic
# recovery, automerge/automerge#1187). The binary size cost is ~2-5%
# but prevents silent process death on shared notebooks.
panic = "unwind"
