[workspace]
members = [
    "crates/build-metadata",
    "crates/runt",
    "crates/runt-trust",
    "crates/runt-workspace",
    "crates/kernel-launch",
    "crates/kernel-env",
    "crates/automerge-recovery",
    "crates/notebook",
    "crates/automunge",
    "crates/comments-doc",
    "crates/notebook-wire",
    "crates/notebook-doc",
    "crates/runtime-doc",
    "crates/notebook-protocol",
    "crates/notebook-cloud-transport",
    "crates/notebook-sync",
    "crates/nteract-identity",
    "crates/nteract-telemetry",
    "crates/xtask",
    "crates/runtimed",
    "crates/runt-publish",
    "crates/runtimed-client",
    "crates/runtimed-outputs",
    "crates/runtimed-service",
    "crates/runtimed-settings-sync",
    "crates/runtimed-node",
    "crates/runtimed-py",
    "crates/runtimed-wasm",
    "crates/mcp-client-branding",
    "crates/mcp-supervisor",
    "crates/nteract-markdown-engine",
    "crates/nteract-markdown-wasm",
    "crates/runt-mcp",
    "crates/runt-mcp-proxy",
    "crates/nteract-mcp",
    "crates/repr-llm",
    "crates/nteract-predicate",
    "crates/sift-wasm",
]
default-members = ["crates/notebook"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/nteract/nteract"

[workspace.dependencies]
anyhow = "1"
arrow = { version = "54", default-features = false }
arrow-cast = { version = "54", default-features = false }
arrow-ord = { version = "54", default-features = false }
arrow-select = { version = "54", default-features = false }
automerge = { git = "https://github.com/nteract/automerge", rev = "3fb6af5cc3af23b79f27cebfa339c8c98987e7b7" }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5.1", features = ["derive"] }
console_error_panic_hook = "0.1"
dirs = "6"
flate2 = "1"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
jiter = { version = "0.13", default-features = false, features = ["num-bigint"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
jupyter-protocol = "2.0.2"
jupyter-zmq-client = { version = "1.0.1", default-features = false }
libc = "0.2"
log = "0.4"
loro_fractional_index = "=1.6.0"
nbformat = "3.0.0"
nix = { version = "0.31", features = ["signal", "process"] }
notify = "8"
notify-debouncer-mini = "0.7"
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "flate2", "zstd"] }
proptest = "1"
rattler = { version = "0.40", default-features = false, features = ["native-tls"] }
rattler_cache = { version = "0.6", default-features = false, features = ["native-tls"] }
rattler_conda_types = "0.44"
rattler_repodata_gateway = { version = "0.27", default-features = false, features = ["gateway", "native-tls"] }
rattler_solve = { version = "5.0", features = ["resolvo"] }
rattler_virtual_packages = "2.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
reqwest-middleware = "0.4"
rmcp = "1.4"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
serial_test = "3"
sha2 = "0.11"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = "1.36.0"
tokio-tungstenite = "0.26"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "12", features = ["serde-compat", "format"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
windows-sys = "0.52"

[workspace.lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Prevent panics in user-facing code - crashes are terrible UX.
# CI runs `clippy -- -D warnings` so these become errors in CI.
# Use #[allow(clippy::unwrap_used)] with a comment explaining why it's safe.
unwrap_used = "warn"
expect_used = "warn"

[profile.dev]
split-debuginfo = "packed"
# sccache and cargo's incremental compilation fight each other: sccache
# caches whole-crate outputs, incremental caches per-function deltas
# inside a crate. With incremental on, sccache's Rust hit rate hovers
# near zero. Turn it off so sccache actually shares builds across
# worktrees, branches, and fresh clones.
incremental = false

# Build third-party deps optimized even in dev. Our own crates stay at
# opt-level=0 for fast incremental rebuilds. Automerge in particular is
# unusable at opt-level=0: widget comm_opens were taking 300-450ms of
# CRDT write time each. Cost is a slower first compile; sccache caches
# the optimized deps so every later build and fresh worktree benefits.
[profile.dev.package."*"]
opt-level = 3

# Build scripts and proc macros run at build time; optimizing them cuts
# the total dev build wall-clock even accounting for the slower compile.
[profile.dev.build-override]
opt-level = 3

[profile.release]
opt-level = 'z'
# Strip DWARF debug info but keep the wasm name section. Browser
# panics from runtimed-wasm and sift-wasm would otherwise show
# opaque indices like `wasm[0]:0x12345` — useless for diagnosing
# field reports. Daemon/CLI binaries take a small (~1-3%) size hit
# but get the same benefit for production panic traces. We avoided
# a custom `[profile.wasm-release]` because wasm-pack's metadata
# parser only recognizes `release`/`profiling`/`dev` — custom
# profiles silently bypass `wasm-opt = false` and other settings.
strip = "debuginfo"
lto = true
codegen-units = 1
# Keep unwinding so catch_unwind guards work in release — both runtimed
# (spawn_supervised task recovery) and document-owned Automerge recovery.
# The binary size cost is ~2-5% but prevents silent process death on
# shared notebooks.
panic = "unwind"
