[project]
name = "nteract"
version = "0.0.2"
description = "Bring AI to Jupyter notebooks. MCP server for Claude, ChatGPT, Gemini, OpenCode and any agent."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Kyle Kelley", email = "rgbkrk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0,<1.0",
    "runtimed>=0.1.5a1",  # Pin to the prerelease while nteract desktop in preview
]

[project.scripts]
nteract = "nteract._mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nteract"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
