[project]
name = "nteract"
version = "0.10.2"
description = "Bring AI to Jupyter notebooks. MCP server for Claude, ChatGPT, Gemini, OpenCode and any agent."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Kyle Kelley", email = "rgbkrk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0,<1.0",
    "runtimed>=0.1.5a202603101316",  # Breaking API change: dependency methods return None/bool
]

[project.scripts]
nteract = "nteract._mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nteract"]

[dependency-groups]
dev = [
    "anyio>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "ty>=0.0.1a7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.10"
