[package]
name = "automerge-recovery"
version = "0.2.2"
edition.workspace = true
description = "Small panic recovery helpers for Automerge operations"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
