[package]
name = "automunge"
version = "0.4.3"
edition.workspace = true
description = "JSON-to-Automerge helpers — recursive read, write, and update for serde_json::Value in Automerge documents"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
