[package]
name = "comments-doc"
version = "0.1.0"
edition.workspace = true
description = "CommentsDoc — durable per-notebook Automerge document for comments"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = { workspace = true }
automerge-recovery = { path = "../automerge-recovery" }
automunge = { path = "../automunge" }
loro_fractional_index = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
