[package]
name = "comments-doc"
version = "0.2.0"
edition.workspace = true
description = "CommentsDoc — durable per-notebook Automerge document for comments"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = { workspace = true }
automerge-recovery = { path = "../automerge-recovery" }
automunge = { path = "../automunge" }
hex = "0.4"
loro_fractional_index = { workspace = true }
serde = { workspace = true }
serde_json = "1"
sha2 = "0.11"
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
