[package]
name = "comments-doc"
version = "0.2.2"
edition.workspace = true
description = "CommentsDoc — durable per-notebook Automerge document for comments"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = { workspace = true }
automerge-recovery = { path = "../automerge-recovery" }
automunge = { path = "../automunge" }
hex = { workspace = true }
loro_fractional_index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
