[package]
name = "kernel-env"
version = "0.3.7"
edition.workspace = true
description = "Python environment management (UV + Conda) with progress reporting"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["runtime"]
runtime = [
    "dep:kernel-launch",
    "dep:rattler",
    "dep:rattler_cache",
    "dep:rattler_conda_types",
    "dep:rattler_repodata_gateway",
    "dep:rattler_solve",
    "dep:rattler_virtual_packages",
    "dep:reqwest",
    "dep:reqwest-middleware",
]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = "0.4"
dirs = "6"
sha2 = "0.11"
hex = "0.4"

# Channel-aware cache directory (nightly vs stable, dev worktree isolation).
runt-workspace = { path = "../runt-workspace" }

# Tool bootstrapping (get_uv_path)
kernel-launch = { path = "../kernel-launch", optional = true }

# Conda environment support via rattler
rattler = { version = "0.40", default-features = false, features = ["native-tls"], optional = true }
rattler_cache = { version = "0.6", default-features = false, features = ["native-tls"], optional = true }
rattler_conda_types = { version = "0.44", optional = true }
rattler_repodata_gateway = { version = "0.27", default-features = false, features = ["gateway", "native-tls"], optional = true }
rattler_solve = { version = "5.0", features = ["resolvo"], optional = true }
rattler_virtual_packages = { version = "2.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["native-tls"], optional = true }
reqwest-middleware = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
which = "7"
