[package]
name = "kernel-env"
version = "0.5.1"
edition.workspace = true
description = "Python environment management (UV + Conda) with progress reporting"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["runtime"]
runtime = [
    "dep:kernel-launch",
    "dep:rattler",
    "dep:rattler_cache",
    "dep:rattler_conda_types",
    "dep:rattler_repodata_gateway",
    "dep:rattler_solve",
    "dep:rattler_virtual_packages",
    "dep:reqwest",
    "dep:reqwest-middleware",
]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Channel-aware cache directory (nightly vs stable, dev worktree isolation).
runt-workspace = { path = "../runt-workspace" }

# Tool bootstrapping (get_uv_path)
kernel-launch = { path = "../kernel-launch", optional = true }

# Conda environment support via rattler
rattler = { workspace = true, optional = true }
rattler_cache = { workspace = true, optional = true }
rattler_conda_types = { workspace = true, optional = true }
rattler_repodata_gateway = { workspace = true, optional = true }
rattler_solve = { workspace = true, optional = true }
rattler_virtual_packages = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
reqwest-middleware = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
which = "7"
