[package]
name = "kernel-launch"
version = "0.5.0"
edition.workspace = true
description = "Shared kernel launching and tool bootstrapping for nteract"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
log = "0.4"
dirs = "6"
sha2 = "0.11"
hex = "0.4"

# Channel-aware tools cache (nightly vs stable, dev worktree isolation).
runt-workspace = { path = "../runt-workspace" }
zip = { version = "8", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GitHub release downloads
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }

[dev-dependencies]
tempfile = "3"
