[package]
name = "kernel-launch"
version = "0.5.2"
edition.workspace = true
description = "Shared kernel launching and tool bootstrapping for nteract"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Channel-aware tools cache (nightly vs stable, dev worktree isolation).
runt-workspace = { path = "../runt-workspace" }
zip = { version = "8", default-features = false, features = ["deflate"] }
flate2 = { workspace = true }
tar = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

# GitHub release downloads
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
