[package]
name = "markdown-doc"
version = "0.1.0"
edition.workspace = true
description = "Shared Automerge Markdown document model for desktop and hosted nteract Markdown surfaces"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = { workspace = true }
automerge-recovery = { path = "../automerge-recovery" }
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }

[lints]
workspace = true
