[package]
name = "mcp-supervisor"
version = "0.3.8"
edition.workspace = true
description = "nteract-dev — MCP supervisor that proxies to the nteract MCP server with auto-restart, file watching, and daemon management"
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "mcp-supervisor"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.4", features = ["server", "client", "transport-child-process", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
runt-workspace = { path = "../runt-workspace" }
runt-mcp-proxy = { path = "../runt-mcp-proxy" }
dirs = "6"
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
