[package]
name = "mcp-supervisor"
version = "0.5.1"
edition.workspace = true
description = "nteract-dev — MCP supervisor that proxies to the nteract MCP server with auto-restart, file watching, and daemon management"
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "mcp-supervisor"
path = "src/main.rs"

[dependencies]
rmcp = { workspace = true, features = ["server", "client", "transport-child-process", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
runt-workspace = { path = "../runt-workspace" }
runt-mcp-proxy = { path = "../runt-mcp-proxy" }
dirs = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
