[package]
name = "notebook-cloud-transport"
version = "0.2.2"
edition.workspace = true
description = "Cloud-WebSocket FrameTransport for the runtime agent (dials a hosted notebook room as a runtime peer)"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
notebook-protocol = { path = "../notebook-protocol" }
notebook-wire = { path = "../notebook-wire" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
