[package]
name = "notebook-doc"
version = "0.3.3"
edition.workspace = true
description = "Shared Automerge notebook document types and operations, used by both runtimed (daemon) and runtimed-wasm (frontend)"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = "0.8"
automerge-recovery = { path = "../automerge-recovery" }
ciborium = "0.2"
loro_fractional_index = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
toml = "1"
automunge = { path = "../automunge" }
log = { version = "0.4", optional = true }
sha2 = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
hex = "0.4"
runtime-doc = { path = "../runtime-doc" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
tempfile = "3"
uuid = { version = "1", features = ["v5"] }

[features]
default = []
# Enable file persistence methods (load_or_create, save_to_file, notebook_doc_filename)
# and logging. Not available for wasm32 targets.
persistence = ["dep:log", "dep:sha2", "dep:hex"]

[lints]
workspace = true
