[package]
name = "notebook-doc"
version = "0.5.2"
edition.workspace = true
description = "Shared Automerge notebook document types and operations, used by both runtimed (daemon) and runtimed-wasm (frontend)"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = { workspace = true }
automerge-recovery = { path = "../automerge-recovery" }
ciborium = "0.2"
loro_fractional_index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
automunge = { path = "../automunge" }
log = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
runtime-doc = { path = "../runtime-doc" }
serde = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }

[features]
default = []
# Enable file persistence methods (load_or_create, save_to_file, notebook_doc_filename)
# and logging. Not available for wasm32 targets.
persistence = ["dep:log", "dep:sha2", "dep:hex"]

[lints]
workspace = true
