[package]
name = "notebook-protocol"
version = "0.4.2"
edition.workspace = true
description = "Shared wire protocol types for notebook sync (client and server)"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
log = "0.4"
notebook-doc = { path = "../notebook-doc" }
notebook-wire = { path = "../notebook-wire" }
runtime-doc = { path = "../runtime-doc" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
