[package]
name = "notebook-protocol"
version = "0.5.0"
edition.workspace = true
description = "Shared wire protocol types for notebook sync (client and server)"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
log = "0.4"
notebook-wire = { path = "../notebook-wire" }
nteract-identity = { path = "../nteract-identity", default-features = false, features = ["local"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
