[package]
name = "notebook-sync"
version = "0.3.3"
edition.workspace = true
description = "Automerge-based notebook sync client with direct document access"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
automerge = "0.8"
automerge-recovery = { path = "../automerge-recovery" }
notebook-doc = { path = "../notebook-doc" }
runtime-doc = { path = "../runtime-doc" }
notebook-protocol = { path = "../notebook-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
log = "0.4"

[dev-dependencies]
runt-workspace = { path = "../runt-workspace" }
