[package]
name = "notebook-sync"
version = "0.5.1"
edition.workspace = true
description = "Automerge-based notebook sync client with direct document access"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
automerge = { workspace = true }
automerge-recovery = { path = "../automerge-recovery" }
notebook-doc = { path = "../notebook-doc" }
runtime-doc = { path = "../runtime-doc" }
notebook-protocol = { path = "../notebook-protocol" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

uuid = { workspace = true }
log = { workspace = true }

[dev-dependencies]
runt-workspace = { path = "../runt-workspace" }
