[package]
name = "notebook"
version = "2.6.2"
edition.workspace = true
description = "Tauri-based notebook UI for Jupyter kernels"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "notebook"
path = "src/lib.rs"
# Desktop-only binary. The `notebook` bin is the single entry point;
# the rlib exists so `main.rs` can call `notebook::run`. If a mobile
# target (iOS/Android) is ever added, it needs `staticlib`/`cdylib`
# under a target-cfg, not here. Unconditional mobile crate-types cost
# a full extra linker pass per edit on every desktop build.
crate-type = ["lib"]

[[bin]]
name = "notebook"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tauri = { version = "2", features = ["devtools"] }
# Activate wry's `fullscreen` feature (Cargo feature unification) so WKWebView
# enables the HTML5 Fullscreen API. Required for sift's fullscreen button and
# any embedded visualizations (maps, 3D) that call requestFullscreen().
wry = { version = "0.54", features = ["fullscreen"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
tauri-plugin-window-state = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
runtimed-client = { path = "../runtimed-client" }
runtimed-settings-sync = { path = "../runtimed-settings-sync" }
nteract-telemetry = { path = "../nteract-telemetry" }
notebook-doc = { path = "../notebook-doc" }
notebook-wire = { path = "../notebook-wire" }
notebook-protocol = { path = "../notebook-protocol" }
notebook-sync = { path = "../notebook-sync" }
runt-workspace = { path = "../runt-workspace" }
nbformat = { workspace = true }
log = { workspace = true }
tauri-plugin-log = "2"
strsim = "0.11"  # For Levenshtein distance (typosquat detection)
chrono = { workspace = true, features = ["std", "clock"] }
dirs = { workspace = true }
rfd = "0.17"  # Native dialogs for pre-window error display
flate2 = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tar = { workspace = true }

# WebDriver plugin for E2E testing
tauri-plugin-webdriver = { version = "0.2", optional = true }

# macOS: app activation for file dialogs when no windows exist
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

# Windows CLI shim install writes HKCU\Environment\Path and broadcasts
# WM_SETTINGCHANGE so new shells see the installed commands. The Reg* APIs we
# call (RegCreateKeyExW, RegSetValueExW, ...) take a SECURITY_ATTRIBUTES
# pointer, so the windows-sys symbols are gated on the `Win32_Security` feature
# in addition to `Win32_System_Registry` itself.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging"] }

# Unix process group support for kernel cleanup
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[features]
default = []
e2e-webdriver = ["tauri-plugin-webdriver"]

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
build-metadata = { path = "../build-metadata" }
serde_json = { workspace = true }
tauri-build = { version = "2", features = [] }

[package.metadata.cargo-machete]
# `wry` is depended on only to activate its `fullscreen` Cargo feature
# via feature unification — no direct code uses it. See the wry line
# in [dependencies] for the full rationale.
ignored = ["wry"]
