[package]
name = "nteract-identity"
version = "0.1.1"
edition.workspace = true
description = "Identity and authorization primitives for nteract notebook rooms"
repository.workspace = true
license.workspace = true

[features]
default = ["local"]
local = []
oidc = ["dep:jsonwebtoken"]
jupyterhub = []

[lints]
workspace = true

[dependencies]
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
serde_json = { workspace = true }
