[package]
name = "nteract-identity"
version = "0.2.2"
edition.workspace = true
description = "Identity and authorization primitives for nteract notebook rooms"
repository.workspace = true
license.workspace = true

[features]
default = ["local"]
local = []
oidc = ["dep:jsonwebtoken"]
jupyterhub = []

[lints]
workspace = true

[dependencies]
jsonwebtoken = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
jsonwebtoken = { workspace = true, features = ["use_pem"] }
serde_json = { workspace = true }
