[package]
name = "nteract-mcp"
version = "0.2.7"
edition.workspace = true
description = "nteract MCP server — resilient proxy in front of `runt mcp`. Ships as a sidecar in the nteract desktop app, inside the .mcpb Claude Desktop extension, and in the Claude Code plugin."
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "nteract-mcp"
path = "src/main.rs"

[dependencies]
runt-mcp-proxy = { path = "../runt-mcp-proxy" }
runt-workspace = { path = "../runt-workspace" }
rmcp = { version = "1.4", features = ["transport-io"] }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"

[lints]
workspace = true
